- Create update realtime
- Allow send event listener from BE to update realtime